test/compile_error/redefined.conf.4.def
config redefined_conf {
	redefined_conf : int;
}
